@@ -1,6 +1,10 @@
 v3.3.15 (XXXX-XX-XX)
 --------------------
 
+* fixed issue #5941 if using breadth-first search in traversals uniqueness checks
+  on path (vertices and edges) have not been applied. In SmartGraphs the checks
+  have been executed properly.
+
 * added more detailed progress output to arangorestore, showing the percentage of
   how much data is restored for bigger collections plus a set of overview statistics
   after each processed collection
